Work on cleaning up interface

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 @import "base";
 @import "partial/form";
 @import "partial/table";
