--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -1,9 +1,13 @@
 $blue: #0000ff;
 $green: #00aa00;
+$red: #ff0000;
+$white: #ffffff;
 
-$base-font-family: sans-serif;
+$primary: #7770bb;
+
+$base-font-family: 'Roboto', sans-serif;
 $base-font-size: 1em;
 
 $panel-background: #eeeeee;
 
-$gutter: 0.75em;
+$gutter: 1em;
