--- a/src/scss/partial/_mixins.scss
+++ b/src/scss/partial/_mixins.scss
@@ -8,11 +8,13 @@
 @mixin button()
 {
     @include shadow();
+    display: inline-block;
     padding: ($gutter / 2) $gutter ($gutter / 2) $gutter;
     color: $white;
     background: $primary;
     border: 0;
-    text-transform: uppercase;
     margin: 0 ($gutter / 2) ($gutter / 2) 0;
+    text-decoration: none;
     font-weight: bold;
+    box-sizing: border-box;
 }
