--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -1,13 +1,13 @@
-$blue: #0000ff;
+$blue: #5453ff;
 $green: #00aa00;
 $red: #ff0000;
 $white: #ffffff;
+$black: #000000;
+$light-grey: #cfcfcf;
 
 $primary: #7770bb;
 
 $base-font-family: 'Roboto', sans-serif;
 $base-font-size: 1em;
-
-$panel-background: #eeeeee;
 
 $gutter: 1em;
